--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "encoding": "^0.1.13",
     "langchain": "^0.0.164",
     "mongodb": "^5.9.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.5.6",
     "pdf-parse": "^1.1.1",
     "react": "^18",
